[package]
name = "wasm"
version = "0.1.0"
authors = ["Jerome David"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
serde = "1.0.136"
nu-json = { version = "0.44.0", features = [ "preserve_order" ] }
serde_json = "1.0.79"

[profile.release]
opt-level = "s"
lto = true
