[package]
name = "wasm"
version = "0.1.0"
authors = ["Jerome David"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.79"
serde = "1.0.136"
json5 = "0.4.1"
serde_json = { version = "1.0.79", features = ["preserve_order","arbitrary_precision"] }

[profile.release]
opt-level = "s"
lto = true
